# CR-HW3

./: .gitignore  CMakeLists.txt  project3.cpp
img/plant/: plant_left_0000.ppm  plant_left_0001.ppm  plant_left_0002.ppm  plant_left_0003.ppm  plant_left_0004.ppm  plant_left_0005.ppm  plant_left_0006.ppm  plant_left_0007.ppm  plant_left_0008.ppm  plant_left_0009.ppm  plant_left_0010.ppm  plant_left_0011.ppm  plant_left_0012.ppm  plant_left_0013.ppm  plant_left_0014.ppm  plant_left_0015.ppm  plant_left_0016.ppm  plant_left_0017.ppm  plant_left_0018.ppm  plant_left_0019.ppm  plant_left_0020.ppm  plant_left_0021.ppm  plant_left_0022.ppm  plant_left_0023.ppm  plant_left_0024.ppm  plant_left_0025.ppm  plant_left_0026.ppm  plant_left_0027.ppm  plant_left_0028.ppm  plant_left_0029.ppm  plant_left_0030.ppm  plant_left_0031.ppm  plant_left_0032.ppm  plant_left_0033.ppm  plant_left_0034.ppm  plant_left_0035.ppm  plant_left_0036.ppm  plant_left_0037.ppm  plant_left_0038.ppm  plant_left_0039.ppm  (+213 more)
